// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`zodToMongoSchema > should convert bouncer.domain schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "created_at": {
      "bsonType": "date",
    },
    "domain": {
      "bsonType": "string",
    },
    "ping": {
      "anyOf": [
        {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "message": {
              "bsonType": "string",
            },
            "responseCode": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "responseMessage": {
              "bsonType": [
                "string",
                "null",
              ],
            },
            "status": {
              "bsonType": "string",
              "enum": [
                "valid",
                "invalid",
                "not_supported",
                "error",
              ],
            },
          },
          "required": [
            "status",
            "message",
            "responseCode",
            "responseMessage",
          ],
        },
        {
          "bsonType": "null",
        },
      ],
    },
    "smtp": {
      "bsonType": "string",
    },
    "updated_at": {
      "bsonType": "date",
    },
  },
  "required": [
    "_id",
    "domain",
    "smtp",
    "ping",
    "updated_at",
    "created_at",
  ],
}
`;

exports[`zodToMongoSchema > should convert bouncer.email schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "created_at": {
      "bsonType": "date",
    },
    "domain": {
      "bsonType": [
        "string",
        "null",
      ],
    },
    "email": {
      "bsonType": "string",
    },
    "ping": {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "message": {
          "bsonType": "string",
        },
        "responseCode": {
          "bsonType": [
            "string",
            "null",
          ],
        },
        "responseMessage": {
          "bsonType": [
            "string",
            "null",
          ],
        },
        "status": {
          "bsonType": "string",
          "enum": [
            "valid",
            "invalid",
            "not_supported",
            "error",
          ],
        },
      },
      "required": [
        "status",
        "message",
        "responseCode",
        "responseMessage",
      ],
    },
    "smtp": {
      "bsonType": [
        "string",
        "null",
      ],
    },
  },
  "required": [
    "_id",
    "email",
    "domain",
    "smtp",
    "ping",
    "created_at",
  ],
}
`;

exports[`zodToMongoSchema > should convert catalogueEmailSirets schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "email": {
      "bsonType": "string",
      "description": "Email de l'utilisateur",
    },
    "siret": {
      "bsonType": "string",
      "description": "Siret de l'utilisateur",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "email",
    "siret",
  ],
}
`;

exports[`zodToMongoSchema > should convert deca schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "alternant": {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "adresse": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "code_postal": {
              "bsonType": "string",
              "description": "Le code postal de l'adresse",
            },
            "numero": {
              "bsonType": [
                "number",
                "null",
              ],
              "description": "Le numéro de l'adresse",
            },
            "voie": {
              "bsonType": "string",
              "description": "La voie de l'adresse",
            },
          },
        },
        "courriel": {
          "bsonType": "string",
          "description": "L'adresse email de l'alternant",
        },
        "date_naissance": {
          "bsonType": "date",
          "description": "La date de naissance de l'alternant",
        },
        "departement_naissance": {
          "bsonType": "string",
          "description": "Le département de naissance de l'alternant",
        },
        "derniere_classe": {
          "bsonType": [
            "string",
            "null",
          ],
          "description": "La dernière classe de l'apprenant",
        },
        "handicap": {
          "bsonType": "bool",
          "description": "Indique si l'alternant est identifié comme porteur d'un handicap",
        },
        "nationalite": {
          "bsonType": "number",
          "description": "Le code de la nationalité de l'alternant",
        },
        "nom": {
          "bsonType": "string",
          "description": "Le nom de l'alternant",
        },
        "prenom": {
          "bsonType": "string",
          "description": "Le prenom de l'alternant",
        },
        "sexe": {
          "bsonType": [
            "string",
            "null",
          ],
          "description": "Le sexe de l'alternant",
        },
        "telephone": {
          "bsonType": "string",
          "description": "Le numéro de téléphone de l'alternant",
        },
      },
      "required": [
        "nom",
        "date_naissance",
      ],
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "date_debut_contrat": {
      "bsonType": "date",
      "description": "La date de début du contrat",
    },
    "date_effet_avenant": {
      "bsonType": "date",
      "description": "La date d'effet de l'avenant du contrat",
    },
    "date_effet_rupture": {
      "bsonType": "date",
      "description": "La date d'effet de la rupture",
    },
    "date_fin_contrat": {
      "bsonType": "date",
      "description": "La date de fin du contrat",
    },
    "date_suppression": {
      "bsonType": "date",
      "description": "La date de suppression ?",
    },
    "dispositif": {
      "bsonType": "string",
      "description": "dispositif",
    },
    "employeur": {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "adresse": {
          "additionalProperties": false,
          "bsonType": "object",
          "properties": {
            "code_postal": {
              "bsonType": "string",
              "description": "Le code postal de l'adresse",
            },
          },
          "required": [
            "code_postal",
          ],
        },
        "code_idcc": {
          "bsonType": "string",
          "description": "Le code IDCC de l'employeur",
        },
        "courriel": {
          "bsonType": "string",
          "description": "Email de l’employeur",
        },
        "denomination": {
          "bsonType": "string",
          "description": "Denomination de l'employeur",
        },
        "naf": {
          "bsonType": "string",
          "description": "Code NAF de l’entreprise",
        },
        "nombre_de_salaries": {
          "bsonType": "number",
          "description": "Effectif salarié de l'entreprise",
        },
        "siret": {
          "bsonType": "string",
          "description": "N° SIRET de l'employeur",
        },
        "telephone": {
          "bsonType": "string",
          "description": "Téléphone de l'employeur",
        },
      },
    },
    "employeur_specifique": {
      "bsonType": "number",
      "description": "Employeur specifique",
    },
    "etablissement_formation": {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "siret": {
          "bsonType": "string",
          "description": "Le siret de l'établissement de la formation",
          "pattern": "^[0-9]{14}$",
        },
      },
    },
    "flag_correction": {
      "bsonType": "bool",
      "description": "Flag correction",
    },
    "formation": {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "code_diplome": {
          "bsonType": "string",
          "description": "Le code diplôme de la formation",
        },
        "date_debut_formation": {
          "bsonType": "date",
          "description": "La date de début de la formation",
        },
        "date_fin_formation": {
          "bsonType": "date",
          "description": "La date de fin de la formation",
        },
        "intitule_ou_qualification": {
          "bsonType": "string",
          "description": "L'adresse email de l'alternant",
        },
        "rncp": {
          "bsonType": "string",
          "description": "Le code RNCP de la formation",
        },
        "type_diplome": {
          "bsonType": "string",
          "description": "Catégorie par niveau du Diplôme ou titre visé par l'Alternant",
        },
      },
    },
    "no_avenant": {
      "bsonType": "string",
      "description": "Le numéro de l'avenant du contrat",
    },
    "no_contrat": {
      "bsonType": "string",
      "description": "Le numéro du contrat",
    },
    "organisme_formation": {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "siret": {
          "bsonType": "string",
          "description": "Le SIRET de l'organisme de formation principal",
        },
        "uai_cfa": {
          "bsonType": "string",
          "description": "L'UAI de l'organisme responsable",
        },
      },
    },
    "rupture_avant_debut": {
      "bsonType": "bool",
      "description": "rupture_avant_debut",
    },
    "statut": {
      "bsonType": "string",
      "description": "Le statut du contrat",
    },
    "type_contrat": {
      "bsonType": "string",
    },
    "type_derogation": {
      "bsonType": "number",
      "description": "Type de dérogation",
    },
    "type_employeur": {
      "bsonType": "number",
      "description": "Type employeur",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "no_contrat",
    "date_debut_contrat",
    "date_fin_contrat",
    "alternant",
    "formation",
    "employeur",
  ],
}
`;

exports[`zodToMongoSchema > should convert decaHistory schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "deca_id": {
      "bsonType": "objectId",
    },
    "from": {
      "description": "Value from",
    },
    "key": {
      "bsonType": "string",
      "description": "Modified key",
    },
    "time": {
      "bsonType": "date",
      "description": "Modified time",
    },
    "to": {
      "description": "Value to",
    },
  },
  "required": [
    "_id",
    "key",
    "deca_id",
    "time",
  ],
}
`;

exports[`zodToMongoSchema > should convert documentContents schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "content": {
      "additionalProperties": true,
      "bsonType": "object",
      "description": "Contenu du document",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "document_id": {
      "bsonType": "string",
      "description": "Identifiant du document",
    },
    "type_document": {
      "bsonType": "string",
      "description": "Le type de document (exemple: DECA, etc..)",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "document_id",
  ],
}
`;

exports[`zodToMongoSchema > should convert documents schema 1`] = `
{
  "anyOf": [
    {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "_id": {
          "bsonType": "objectId",
        },
        "added_by": {
          "bsonType": "string",
          "description": "Qui a ajouté le fichier",
        },
        "chemin_fichier": {
          "bsonType": "string",
          "description": "Chemin du fichier binaire",
        },
        "columns": {
          "anyOf": [
            {
              "bsonType": "array",
              "items": {
                "bsonType": "string",
              },
            },
            {
              "bsonType": "null",
            },
          ],
          "description": "Liste des colonnes",
        },
        "created_at": {
          "bsonType": "date",
          "description": "Date d'ajout en base de données",
        },
        "delimiter": {
          "bsonType": [
            "string",
            "null",
          ],
          "description": "Délimiteur",
        },
        "ext_fichier": {
          "bsonType": "string",
          "description": "Le type de fichier extension",
          "enum": [
            "xlsx",
            "xls",
            "csv",
          ],
        },
        "hash_fichier": {
          "bsonType": "string",
          "description": "Checksum fichier",
        },
        "hash_secret": {
          "bsonType": "string",
          "description": "Hash fichier",
        },
        "import_progress": {
          "anyOf": [
            {
              "bsonType": "number",
            },
            {
              "bsonType": "null",
            },
          ],
          "description": "Progress percentage (-1 not started)",
        },
        "job_error": {
          "bsonType": [
            "string",
            "null",
          ],
          "description": "Erreur du job de génération",
        },
        "job_id": {
          "bsonType": [
            "string",
            "null",
          ],
          "description": "Identifiant du job de génération",
        },
        "job_status": {
          "bsonType": "string",
          "description": "Status du job de génération",
          "enum": [
            "pending",
            "paused",
            "importing",
            "done",
            "error",
          ],
        },
        "kind": {
          "bsonType": "string",
        },
        "lines_count": {
          "anyOf": [
            {
              "bsonType": "int",
            },
            {
              "bsonType": "null",
            },
          ],
          "description": "Number of lines",
        },
        "nom_fichier": {
          "bsonType": "string",
          "description": "Le nom de fichier",
        },
        "taille_fichier": {
          "bsonType": "int",
          "description": "Taille du fichier en bytes",
        },
        "type_document": {
          "bsonType": "string",
          "description": "Le type de document (exemple: DECA, etc..)",
        },
        "updated_at": {
          "anyOf": [
            {
              "bsonType": "date",
            },
            {
              "bsonType": "null",
            },
          ],
          "description": "Date de mise à jour en base de données",
        },
      },
      "required": [
        "_id",
        "kind",
        "type_document",
        "ext_fichier",
        "nom_fichier",
        "chemin_fichier",
        "taille_fichier",
        "hash_secret",
        "hash_fichier",
        "added_by",
        "created_at",
        "job_status",
      ],
    },
    {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "_id": {
          "bsonType": "objectId",
        },
        "added_by": {
          "bsonType": "string",
          "description": "Qui a ajouté le fichier",
        },
        "chemin_fichier": {
          "bsonType": "string",
          "description": "Chemin du fichier binaire",
        },
        "created_at": {
          "bsonType": "date",
          "description": "Date d'ajout en base de données",
        },
        "ext_fichier": {
          "bsonType": "string",
          "description": "Le type de fichier extension",
          "enum": [
            "xlsx",
            "xls",
            "csv",
          ],
        },
        "hash_fichier": {
          "bsonType": "string",
          "description": "Checksum fichier",
        },
        "hash_secret": {
          "bsonType": "string",
          "description": "Hash fichier",
        },
        "job_id": {
          "bsonType": [
            "string",
            "null",
          ],
          "description": "Identifiant du job de génération",
        },
        "job_status": {
          "bsonType": "string",
          "description": "Status du job de génération",
          "enum": [
            "pending",
            "paused",
            "processing",
            "done",
            "error",
          ],
        },
        "kind": {
          "bsonType": "string",
        },
        "lines_count": {
          "bsonType": "int",
          "description": "Number of lines",
        },
        "nom_fichier": {
          "bsonType": "string",
          "description": "Le nom de fichier",
        },
        "process_progress": {
          "bsonType": "number",
          "description": "Number of lines processed",
        },
        "taille_fichier": {
          "bsonType": "int",
          "description": "Taille du fichier en bytes",
        },
        "type_document": {
          "bsonType": "string",
          "description": "Le type de document (exemple: DECA, etc..)",
        },
        "updated_at": {
          "bsonType": "date",
          "description": "Date de mise à jour en base de données",
        },
      },
      "required": [
        "_id",
        "kind",
        "type_document",
        "ext_fichier",
        "nom_fichier",
        "chemin_fichier",
        "taille_fichier",
        "hash_secret",
        "hash_fichier",
        "added_by",
        "created_at",
        "job_status",
      ],
    },
  ],
}
`;

exports[`zodToMongoSchema > should convert emailDenied schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "email": {
      "bsonType": "string",
      "description": "L'email rejetée",
    },
    "reason": {
      "bsonType": "string",
      "enum": [
        "unsubscribe",
      ],
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "email",
    "reason",
    "created_at",
  ],
}
`;

exports[`zodToMongoSchema > should convert events schema 1`] = `
{
  "anyOf": [
    {
      "additionalProperties": false,
      "bsonType": "object",
      "properties": {
        "_id": {
          "bsonType": "objectId",
        },
        "created_at": {
          "bsonType": "date",
        },
        "delivered_at": {
          "anyOf": [
            {
              "bsonType": "date",
            },
            {
              "bsonType": "null",
            },
          ],
        },
        "errors": {
          "bsonType": "array",
          "items": {
            "additionalProperties": false,
            "bsonType": "object",
            "properties": {
              "message": {
                "bsonType": "string",
              },
              "type": {
                "bsonType": "string",
                "enum": [
                  "fatal",
                  "soft_bounce",
                  "hard_bounce",
                  "complaint",
                  "invalid_email",
                  "blocked",
                  "error",
                ],
              },
            },
          },
        },
        "messageId": {
          "bsonType": [
            "string",
            "null",
          ],
        },
        "opened_at": {
          "anyOf": [
            {
              "bsonType": "date",
            },
            {
              "bsonType": "null",
            },
          ],
        },
        "person_id": {
          "bsonType": "string",
          "description": "Identifiant de la personne",
        },
        "template": {
          "anyOf": [
            {
              "additionalProperties": false,
              "bsonType": "object",
              "properties": {
                "civility": {
                  "anyOf": [
                    {
                      "bsonType": "string",
                      "enum": [
                        "Madame",
                        "Monsieur",
                      ],
                    },
                    {
                      "bsonType": "null",
                    },
                  ],
                },
                "name": {
                  "bsonType": "string",
                },
                "nom": {
                  "bsonType": [
                    "string",
                    "null",
                  ],
                },
                "prenom": {
                  "bsonType": [
                    "string",
                    "null",
                  ],
                },
                "resetPasswordToken": {
                  "bsonType": "string",
                },
                "to": {
                  "bsonType": "string",
                },
              },
              "required": [
                "name",
                "to",
                "resetPasswordToken",
              ],
            },
          ],
        },
        "type": {
          "bsonType": "string",
          "description": "Type de l'évènement",
        },
        "updated_at": {
          "bsonType": "date",
        },
      },
      "required": [
        "_id",
        "type",
        "person_id",
        "template",
        "created_at",
        "updated_at",
        "opened_at",
        "delivered_at",
        "messageId",
        "errors",
      ],
    },
  ],
}
`;

exports[`zodToMongoSchema > should convert mailingLists schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "added_by": {
      "bsonType": "string",
      "description": "L'utilisateur ayant crée la liste",
    },
    "campaign_name": {
      "bsonType": "string",
      "description": "Nom de la campagne",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "document_id": {
      "bsonType": "string",
      "description": "Identifiant du document généré",
    },
    "email": {
      "bsonType": "string",
      "description": "Nom de la colonne email",
    },
    "identifier_columns": {
      "bsonType": "array",
      "description": "Liste des colonnes d'identifiants",
      "items": {
        "bsonType": "string",
      },
    },
    "output_columns": {
      "bsonType": "array",
      "description": "Liste des colonnes de sortie",
      "items": {
        "additionalProperties": false,
        "bsonType": "object",
        "properties": {
          "column": {
            "bsonType": "string",
          },
          "output": {
            "bsonType": "string",
          },
          "simple": {
            "bsonType": "bool",
          },
        },
        "required": [
          "column",
          "output",
          "simple",
        ],
      },
    },
    "secondary_email": {
      "bsonType": "string",
      "description": "Nom de la colonne email secondaire",
    },
    "source": {
      "bsonType": "string",
      "description": "Source de la campagne",
    },
    "training_columns": {
      "additionalProperties": false,
      "bsonType": "object",
      "description": "Liste des colonnes lié à la formation",
      "properties": {
        "cfd": {
          "bsonType": "string",
        },
        "cle_ministere_educatif": {
          "bsonType": "string",
        },
        "code_insee": {
          "bsonType": "string",
        },
        "code_postal": {
          "bsonType": "string",
        },
        "mef": {
          "bsonType": "string",
        },
        "rncp": {
          "bsonType": "string",
        },
        "uai_formateur": {
          "bsonType": "string",
        },
        "uai_formateur_responsable": {
          "bsonType": "string",
        },
        "uai_lieu_formation": {
          "bsonType": "string",
        },
      },
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "campaign_name",
    "source",
    "email",
    "identifier_columns",
    "output_columns",
    "training_columns",
    "added_by",
    "updated_at",
    "created_at",
  ],
}
`;

exports[`zodToMongoSchema > should convert organisations schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "_meta": {
      "additionalProperties": true,
      "bsonType": "object",
      "description": "Métadonnées",
      "properties": {
        "sources": {
          "bsonType": "array",
          "items": {
            "bsonType": "string",
          },
        },
      },
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "email_domains": {
      "bsonType": "array",
      "description": "Liste des domaines email",
      "items": {
        "bsonType": "string",
      },
    },
    "etablissements": {
      "bsonType": "array",
      "description": "Liste des établissements",
      "items": {
        "additionalProperties": false,
        "bsonType": "object",
        "properties": {
          "is_close": {
            "bsonType": "bool",
            "description": "Est fermé",
          },
          "is_hq": {
            "bsonType": "bool",
            "description": "Siège social",
          },
          "nom": {
            "bsonType": "string",
            "description": "Nom de l'établissement",
          },
          "siret": {
            "bsonType": "string",
            "description": "Siret actif de l'établissement",
          },
        },
      },
    },
    "nom": {
      "bsonType": "string",
      "description": "Nom de l'organisation",
    },
    "siren": {
      "bsonType": "string",
      "description": "Siren de l'organisation",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
  ],
}
`;

exports[`zodToMongoSchema > should convert persons schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "_meta": {
      "additionalProperties": true,
      "bsonType": "object",
      "description": "Métadonnées",
      "properties": {
        "sources": {
          "bsonType": "array",
          "items": {
            "bsonType": "string",
          },
        },
      },
    },
    "civility": {
      "bsonType": "string",
      "description": "civilité",
      "enum": [
        "Madame",
        "Monsieur",
      ],
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "email": {
      "bsonType": "string",
      "description": "Email de la personne",
    },
    "nom": {
      "bsonType": "string",
      "description": "Le nom de la personne",
    },
    "organisations": {
      "bsonType": "array",
      "description": "Liste des organisations",
      "items": {
        "bsonType": "string",
        "description": "Identifiant de l'organisation",
      },
    },
    "prenom": {
      "bsonType": "string",
      "description": "Le prénom de la personne",
    },
    "sirets": {
      "bsonType": "array",
      "description": "Liste de sirets recensé (sécurisation qualité de la donnée)",
      "items": {
        "bsonType": "string",
      },
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "email",
    "organisations",
  ],
}
`;

exports[`zodToMongoSchema > should convert sessions schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "expires_at": {
      "bsonType": "date",
      "description": "Date d'expiration",
    },
    "token": {
      "bsonType": "string",
      "description": "Token de la session",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "token",
    "updated_at",
    "created_at",
    "expires_at",
  ],
}
`;

exports[`zodToMongoSchema > should convert users schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
    },
    "api_key": {
      "bsonType": "string",
      "description": "Clé API",
    },
    "api_key_used_at": {
      "anyOf": [
        {
          "bsonType": "date",
        },
        {
          "bsonType": "null",
        },
      ],
      "description": "Date de dernière utilisation de la clé API",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "email": {
      "bsonType": "string",
      "description": "Email de l'utilisateur",
    },
    "is_admin": {
      "bsonType": "bool",
      "description": "Est administrateur",
    },
    "is_support": {
      "bsonType": "bool",
      "description": "Est support",
    },
    "password": {
      "bsonType": "string",
      "description": "Mot de passe de l'utilisateur",
    },
    "person_id": {
      "bsonType": "string",
      "description": "Identifiant de la personne",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "email",
    "password",
    "person_id",
  ],
}
`;
